Update deprecated methods